# job_offer_simulator

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
app/: streamlit_app.py
app/components/: __init__.py
docs/images/: screenshot.txt
scripts/: seed_fake_data.py
src/: data_logging.py  simulation.py
src/models/: __init__.py  bayesian.py  frequentist.py
tests/: test_simulation.py
