[tool.poetry]
name = "job-offer-simulator"
version = "0.1.0-alpha"
description = "Monte Carlo simulation tool for estimating job offer probabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.29.0"
pymc = "^5.9.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
statsmodels = "^0.14.0"
altair = "^5.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.290"

[tool.poetry.scripts]
simulate = "src.simulation:main"
app = "app.streamlit_app:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
